--- a/index.html
+++ b/index.html
@@ -2,35 +2,16 @@
 
 <html>
   <head>
-    <title>My 2010s Memories</title>
-    <meta charset = "UTF-8">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
-     <style>
-       h1 {text-align: center;}
-       p{
-         color: black;
-        }
-       div.paragraph{
-         font-family: cursive;
-        } 
-     </style>
+    <title>My Website</title>
+    <meta charset= "UTF-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
   </head>
   
   <body>
-    <h1> 
-      <div style="font-family: cursive;">My 2010s Memories </div>
-    </h1>
-    <div class="paragraph">
-      <p> 
-        Hello guys, My name is Rahul. Well, this is my first website ever. Don't 
-        know much about web-development and blogging yet but I tried my best :)
-      </p>
-      <div style="color:violet;"> 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doe iusmod tempor labore et dolore magna aliqua.
-      </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem viverra aliquet eget sit amet tellus cras adipiscing. Potenti nullam ac tortor vitae. Lacus laoreet non curabitur gravida. Justo eget magna fermentum iaculis eu non. Mi proin sed libero enim sed faucibus turpis. Mi bibendum neque egestas congue quisque egestas diam in arcu. Neque volutpat ac tincidunt vitae. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget. Pretium nibh ipsum consequat nisl vel.
-      </p>  
-    </div>  
-   
+    <h1> My Website </h1>
+    <a herf="stories/story1.html"> My 2010s Memories </a>
   </body>
 </html>
+  
+  
+
