--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <body>
     <h1> My Website </h1>
-    <a herf="stories/story1.html"> My 2010s Memories </a>
+    <a href="stories/story1.html"> My 2010s Memories </a>
   </body>
 </html>
   
