--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 
 <html>
   <head>
-    <title>My Website</title>
+    <title>Clocme</title>
     <meta charset= "UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <style>
+      h1 { font-family : cursive; text-align: center;}
+    </style>
   </head>
   
   <body>
-    <h1> My Website </h1>
+    <h1> Clocme </h1>
     <a href="stories/story1.html"> My 2010s Memories </a>
   </body>
 </html>
