--- a/stories/story1.html
+++ b/stories/story1.html
@@ -6,7 +6,7 @@
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
      <style>
-       h1 {text-align: center;}
+       h1 {text-align: center; font-family: cursive;}
        p{
          color: black;
         }
@@ -17,9 +17,10 @@
   </head>
   
   <body>
-    <h1> 
+    <h1> Clocme </h1>
+    <h2> 
       <div style="font-family: cursive;">My 2010s Memories </div>
-    </h1>
+    </h2>
     <div class="paragraph">
       <p> 
         Hello guys, My name is Rahul. Well, this is my first website ever. Don't 
