--- a/index.html
+++ b/index.html
@@ -6,13 +6,39 @@
     <meta charset= "UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <style>
+      .topnav{
+        overflow: hidden;
+        background-color: #333;
+      }
+      .topnav a{
+        float: left;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      .topnav a:hover{
+        background-color: #ddd;
+        color: black;
+      }
+      .topnav a.active {
+        background-color: #04AA6D;
+        color: white;
+      }
+   
       h1 { font-family : cursive; text-align: center;}
+      
     </style>
   </head>
   
   <body>
     <h1> Clocme </h1>
-    <a href="stories/story1.html"> My 2010s Memories </a>
+   
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="stories/story1.html"> My 2010s Memories </a>
+      <a href="#about">About</a>
+    </div>
   </body>
 </html>
   
