--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         color: #f2f2f2;
         text-align: center;
         padding: 14px 16px;
-        text-decoration: none;
+        text-decoration: underline;
       }
       .topnav a:hover{
-        background-color: #ddd;
+        background-color: khaki;
         color: black;
       }
-      .topnav a.active {
-        background-color: #04AA6D;
-        color: white;
+      .topnav a.active:hover{
+        background-color: red;
+        color: black;
       }
-   
       h1 { font-family : cursive; text-align: center;}
       
     </style>
@@ -36,7 +35,7 @@
    
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="stories/story1.html"> My 2010s Memories </a>
+      <a href="stories/story1.html"> Story </a>
       <a href="#about">About</a>
     </div>
   </body>
