--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <meta charset= "UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <style>
+      body{
+        background-color: #333;
+      }
       .topnav{
         overflow: hidden;
-        background-color: #333;
+        background-color: white;
       }
       .topnav a{
         float: left;
-        color: #f2f2f2;
+        color: #333;
         text-align: center;
-        padding: 14px 16px;
-        text-decoration: underline;
+        padding: 14px 24px;
+        text-decoration: none;
       }
       .topnav a:hover{
         background-color: khaki;
         color: black;
       }
-      .topnav a.active:hover{
-        background-color: red;
-        color: black;
-      }
-      h1 { font-family : cursive; text-align: center;}
+     
+      h1 { font-family : cursive; text-align: center; color: white;}
+      p { color: white;}
       
     </style>
   </head>
@@ -36,8 +37,9 @@
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="stories/story1.html"> Story </a>
-      <a href="#about">About</a>
+      <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
     </div>
+     <p> RAHUL </p>
   </body>
 </html>
   
