--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <a href= "file:///home/rahul/MyWebsite2/stories/story1.html">Story</a>
       <a class= "#about"> About</a>
     </div>
-    <h2> ABOUT PAGE </h2>
+    <h2> ABOUT page </h2>
   </body>
 </html>
   
