--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="stories/story1.html"> Story </a>
       <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
     </div>
-     <p> RAHUL </p>
+     <p> My name is Rahul </p>
   </body>
 </html>
   
