--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
    
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="stories/story1.html"> Story </a>
-      <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
+      <a href="https://kamehameh.github.io/MyWebsite2/stories/story1.html"> Story </a>
+      <a href="https://kamehameh.github.io/MyWebsite2/about.html">About</a>
     </div>
      <p> My name is Rahul </p>
   </body>
