--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <a href="https://kamehameh.github.io/MyWebsite2/stories/story1.html"> Story </a>
       <a href="https://kamehameh.github.io/MyWebsite2/about.html">About</a>
     </div>
-     <p> My name is Rahul </p>
+     <p> My name is Rahul Mistry </p>
   </body>
 </html>
   
