--- a/stories/story1.html
+++ b/stories/story1.html
@@ -45,7 +45,7 @@
     </h2>
     <div class="paragraph">
       <p> 
-        Hello guys, My name is Rahul S. Well, this is my first website ever. Don't 
+        Hello guys, My name is Rahul Mistry. Well, this is my first website ever. Don't 
         know much about web-development and blogging yet but I tried my best :)
       </p> 
        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doe iusmod tempor labore et dolore magna aliqua.</p>
