--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <div class= "topnav">
       <a href= "file:///home/rahul/MyWebsite2/index.html">Home</a>
       <a href= "file:///home/rahul/MyWebsite2/stories/story1.html">Story</a>
-      <a class= "#about"> About</a>
+      <a class= "about.html"> About</a>
     </div>
     <h2> ABOUT Clocme </h2>
   </body>
