--- a/stories/story1.html
+++ b/stories/story1.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>My 2010s Memories</title>
+    <title>Story1</title>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
      <style>
@@ -37,7 +37,7 @@
     <h1> Clocme </h1>
     <div class="topnav">
       <a href="file:///home/rahul/MyWebsite2/index.html">Home</a>
-      <a class="active" href="#story1"> Story</a>
+      <a class="active" href="story1.html"> Story</a>
       <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
     </div>
     
