--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <h1> Clocme </h1>
    
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="https://kamehameh.github.io/MyWebsite2/stories/story1.html"> Story </a>
-      <a href="https://kamehameh.github.io/MyWebsite2/about.html">About</a>
+      <a class="active" href="index.html">Home</a>
+      <a href="file:///home/rahul/MyWebsite2/stories/story1.html"> Story </a>
+      <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
     </div>
      <p> My name is Rahul Mistry </p>
   </body>
