--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
   <body>
     <h1> Clocme </h1>
     <div class= "topnav">
-      <a href= "file:///home/rahul/MyWebsite2/index.html">Home</a>
+      <a href= "index.html">Home</a>
       <a href= "file:///home/rahul/MyWebsite2/stories/story1.html">Story</a>
       <a class= "about.html"> About</a>
     </div>
