--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         background-color: khaki;
         color: black;
       }
+      .topnav active:focus{
+        background-color: khaki;
+        color: black;
+      }
+     
      
       h1 { font-family : cursive; text-align: center; color: white;}
       p { color: white;}
@@ -37,7 +42,7 @@
     <div class="topnav">
       <a class="active" href="index.html">Home</a>
       <a href="file:///home/rahul/MyWebsite2/stories/story1.html"> Story </a>
-      <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
+      <a href="about.html">About</a>
     </div>
      <p> My name is Rahul Mistry </p>
   </body>
