--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
    
     <div class="topnav">
       <a class="active" href="index.html">Home</a>
-      <a href="file:///home/rahul/MyWebsite2/stories/story1.html"> Story </a>
-      <a href="about.html">About</a>
+      <a href="./stories/story1.html"> Story </a>
+      <a href="./about.html">About</a>
     </div>
      <p> My name is Rahul Mistry </p>
   </body>
