--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
   <body>
     <h1> Clocme </h1>
     <div class= "topnav">
-      <a href= "./index.html">Home</a>
-      <a href= "./stories/story1.html">Story</a>
+      <a href= "index.html">Home</a>
+      <a href= "stories/story1.html">Story</a>
       <a class= "about.html"> About</a>
     </div>
     <h2> ABOUT Clocme </h2>
