--- a/stories/story1.html
+++ b/stories/story1.html
@@ -34,9 +34,9 @@
   <body>
     <h1> Clocme </h1>
     <div class="topnav">
-      <a href="./index.html">Home</a>
+      <a href="file:///home/rahul/MyWebsite2/index.html">Home</a>
       <a class="active" href="story1.html"> Story</a>
-      <a href="./about.html">About</a>
+      <a href="file:///home/rahul/MyWebsite2/about.html">About</a>
     </div>
     
       <div style="font-family: cursive; color: white;">My 2010s Memories </div>
