--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@
         background-color: khaki;
         color: black;
        }
+       a:active{
+         background-color:khaki;
+       }
      
       h1 { font-family : cursive; text-align: center ; color: white;}
       h2 { color: white;}
@@ -41,9 +44,11 @@
     <div class= "topnav">
       <a href= "index.html">Home</a>
       <a href= "stories/story1.html">Story</a>
-      <a class= "about.html"> About</a>
+      <a class="active" href="about.html"> About</a>
     </div>
-    <h2> ABOUT Clocme </h2>
+    <h2> AUTHOR: Rahul Mistry</h2>
+    <h2> Experience in Web-Development: 2 days</h2>
+    <a href = "https://github.com/kamehameh/MyWebsite2"> This website's Github repo </a>
   </body>
 </html>
   
