--- a/stories/story1.html
+++ b/stories/story1.html
@@ -39,17 +39,13 @@
       <a href="https://kamehameh.github.io/MyWebsite2/about.html">About</a>
     </div>
     
-      <div style="font-family: cursive; color: white;">My 2010s Memories </div>
-    </h2>
-    <div class="paragraph">
-      <p> 
-        Hello guys, My name is Rahul Mistry. Well, this is my first website ever. Don't 
-        know much about web-development and blogging yet but I tried my best :)
-      </p> 
-       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doe iusmod tempor labore et dolore magna aliqua.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem viverra aliquet eget sit amet tellus cras adipiscing. Potenti nullam ac tortor vitae. Lacus laoreet non curabitur gravida. Justo eget magna fermentum iaculis eu non. Mi proin sed libero enim sed faucibus turpis. Mi bibendum neque egestas congue quisque egestas diam in arcu. Neque volutpat ac tincidunt vitae. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget. Pretium nibh ipsum consequat nisl vel.
-      </p>  
-    </div>  
+      <h2 style="font-family: cursive; color: white;">College teaches BullSHit </h2>
+      <p> I am serious, damn serious. Colleges in India are SHIT and it's not just a opinion IT IS
+      A FACT. 
+      <p> The End :)</p>
+      <p>(This is just a model website posted on github. For more information visit "About Page")</p>
+    
+
    
   </body>
 </html>
