--- a/about.html
+++ b/about.html
@@ -33,6 +33,10 @@
       p{
         color: white;
        }
+      a:link {
+       color: pink;
+       background-color: transparent;
+       text-decoration: none;
      
      </style>
     
