--- a/stories/story1.html
+++ b/stories/story1.html
@@ -40,8 +40,7 @@
     </div>
     
       <h2 style="font-family: cursive; color: white;">College teaches BullSHit </h2>
-      <p> I am serious, damn serious. Colleges in India are SHIT and it's not just a opinion IT IS
-      A FACT. 
+      <p>Hello Welcome to my Website</p>
       <p> The End :)</p>
       <p>(This is just a model website posted on github. For more information visit "About Page")</p>
     
